# carp

./: .gitignore  .vercelignore  CLAUDE.md  Cargo.toml  Cargo.toml.bak  DEBUGGING_NO_AGENTS_ISSUE.md  DEPLOYMENT.md  DEPLOYMENT_FIX_SUMMARY.md  Justfile  OPTIMIZATION_SUMMARY.md  README.md  SCHEMA_DOCUMENTATION.md  VIEW_COUNT_FIX_ANALYSIS.md  auth_demo_simple  package.json  test-api-endpoints.sh  test-api.js  test_auth_demo  test_domain.sh  vercel.json
api/: .env.example  Cargo-serverless.toml  Cargo.toml  README.md  health.rs  index.rs  serverless.rs
api/shared/: auth.rs  mod.rs
api/src/: lib.rs  main.rs  state.rs
api/src/auth/: mod.rs
api/src/db/: mod.rs
api/src/handlers/: agents.rs  auth.rs  mod.rs
api/src/middleware/: mod.rs
api/src/models/: mod.rs
api/src/utils/: config.rs  error.rs  mod.rs
api/tests/: auth_tests.rs  file_tests.rs  integration_tests.rs  unit_tests.rs
api/v1/agents/: download.rs  latest.rs  publish.rs  search.rs  test.rs  trending.rs  upload.rs
api/v1/agents/[name]/[version]/: download.rs
api/v1/auth/: api-keys.rs  login.rs
cli/: Cargo.toml  README.md
cli/my-test-agent/: .gitignore  Carp.toml  README.md  agent.py  config.toml
cli/src/: lib.rs  main.rs
cli/src/api/: client.rs  mod.rs  types.rs
cli/src/auth/: manager.rs  mod.rs
cli/src/commands/: healthcheck.rs  list.rs  mod.rs  new.rs  publish.rs  pull.rs  search.rs  upload.rs
cli/src/config/: mod.rs  settings.rs
cli/src/utils/: error.rs  manifest.rs  mod.rs
cli/tests/: README.md  contract_tests.rs  e2e_tests.rs  integration_tests.rs  performance_tests.rs  regression_tests.rs  security_tests.rs
docs/: API_KEYS_DOCUMENTATION.md  API_PERFORMANCE_OPTIMIZATIONS.md  CLI_PHASE2_DOCUMENTATION.md  CLI_PHASE3_QA_REPORT.md  DEPLOYMENT.md  PHASE4_SECURITY_AUDIT_REPORT.md  RLS_FIX_SUMMARY.md  TESTING_REPORT.md
examples/: api_key_usage.rs  auth_flow_demo.rs
scripts/: README.md  list-agents.sh  quick-test.sh  start-local-api.sh  test-search-api.sh  test-search-direct.rs  test_api_key_auth_flow.sh  test_create_api_key.sh  test_delete_api_key.sh  test_download_agent.sh  test_health.sh  test_list_api_keys.sh  test_list_api_keys_validation.sh  test_login.sh  test_optimized_endpoints.sh  test_publish_agent.sh  test_rls_fix.sh  test_search_agents.sh  test_update_api_key.sh  test_upload_agent.sh  test_upload_batch.py  test_upload_json.sh  test_verbose_upload.sh
scripts/test-agents/: test-upload-agent.md
serverless/: Cargo.toml
serverless/src/: main.rs
shared/: auth.rs  middleware.rs  mod.rs
site/: README.md  VIEW_COUNT_FIX_SUMMARY.md  bun.lockb  index.html  usage-content.md
site/docs/: API_KEY_FRONTEND_INTEGRATION.md
site/src/: App.tsx  index.css
site/src/components/: AgentCard.tsx  ApiKeyManagementModal.tsx  CompactAgentCard.tsx  ErrorBoundary.tsx  Header.tsx  SearchBar.tsx  ThemeToggle.tsx  TrendingModal.tsx
site/src/hooks/: useAgents.tsx  useApiKeys.tsx  useAuth.tsx  useFallbackAgents.tsx  useOptimizedAgents.tsx  useStats.tsx  useTheme.tsx  useVirtualizedAgents.tsx
site/src/lib/: api-config.ts
site/src/pages/: AllAgents.tsx  Create.tsx  Index.tsx  Profile.tsx  Usage.tsx
site/supabase/: config.toml
site/supabase/.temp/: pooler-url  project-ref
site/supabase/migrations/: 20250727123053_initial_schema.sql  20250727123210-d871a667-e9f2-4ca3-986e-83e973a8f148.sql  20250727123210_security_fixes.sql  20250727123232-fa1c9a68-d065-42aa-ac5f-107cb981e0ad.sql  20250727123232_trigger_fixes.sql  20250727134000_package_management_schema.sql  20250727134100_storage_and_functions.sql  20250727134200_utility_functions.sql  20250727180005_remote_schema.sql  20250727180310_recreate_package_management_tables.sql  20250727180359_recreate_package_management_policies.sql  20250727180446_recreate_package_management_indexes.sql  20250727180522_recreate_package_management_functions.sql  20250727200000_add_increment_view_count_function.sql  20250727210000_add_get_agent_download_info_function.sql  20250727220000_add_unique_agent_name_constraint.sql  20250727220001_rollback_unique_agent_name_constraint.sql  20250727230000_verify_agents_schema.sql  20250729100000_add_api_keys_table.sql  20250729185700_enhance_api_keys_table.sql  20250729185701_rollback_api_keys_enhancements.sql  (+13 more)
tests/: README_E2E_INTEGRATION_TESTS.md  README_download_tests.md  api_download_tests.rs  api_optimized_endpoints_tests.rs  auth_flow_tests.rs  auth_integration_tests.rs  auth_separation_tests.rs  e2e_download_integration_tests.rs  interactive_download_tests.rs  test_runner.rs  upload_integration_tests.rs  upload_limit_tests.rs
(+2 files in other folders)
