[package]
name = "carp-api-serverless"
version = "0.1.0"
edition = "2021"
description = "Serverless REST API for the Carp agent registry"
license = "MIT OR Apache-2.0"
rust-version = "1.82"

[[bin]]
name = "health"
path = "api/health.rs"

[[bin]]
name = "v1-agents-search"
path = "api/v1/agents/search.rs"

[dependencies]
# Vercel runtime for serverless functions
vercel_runtime = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP types (for vercel_runtime compatibility)
http = "0.2"

# URL parsing
url = "2.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true