[package]
name = "carp-api"
version = "0.1.0"
edition = "2021"
description = "REST API backend for the Carp agent registry"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/carp"
rust-version = "1.82"

[[bin]]
name = "carp-api"
path = "src/main.rs"

[[bin]]
name = "vercel-handler"
path = "serverless.rs"

[dependencies]
# Core web framework - minimal for serverless
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt"] }
tower = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP types
http = "1.0"

# For full API (commented out for now to get basic deployment working)
# tower-http = { version = "0.5", features = ["cors", "trace"] }
# reqwest = { version = "0.12", features = ["json", "multipart"] }
# jsonwebtoken = "9.0"
# argon2 = "0.5"
# rand = "0.8"
# postgrest = "1.5"
# dotenvy = "0.15"
# anyhow = "1.0"
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# sha2 = "0.10"
# zip = "0.6"
# uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
mockito = "1.0"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true