[package]
name = "carp-cli"
version = "0.1.1"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Command-line tool for the Claude Agent Registry Portal"
homepage = "https://carp.refcell.org"
repository = "https://github.com/refcell/carp"
keywords = ["cli", "claude", "agents", "registry"]
categories = ["command-line-utilities"]
authors = ["Andreas Bigger <andreas@refcell.org>"]

[[bin]]
name = "carp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
colored = "2.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rpassword = "7.3"
bytes = "1.6"
zip = "2.2"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
mockito = "1.0"
